--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Gustavo Osorio
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: CS373 Fall 2016: Gustavo Osorio
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars0.githubusercontent.com/u/10736249?v=3&s=460
